# letterbox

./: .gitignore  README.md  gui.py  pyproject.toml
letterbox/: __main__.py  cli.py  config.py  gui.py  image_ops.py  main.py
