[tool.poetry]
name = "letterbox"
version = "0.1.0"
description = ""
authors = ["fakenamesmith"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
typer = {extras = ["all"], version = "^0.13.1"}
pillow = "^11.0.0"
rich = "^13.9.4"

[tool.poetry.scripts]
letterbox = "letterbox.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
