[tool.poetry]
name = "letterbox"
version = "0.1.0"
description = "Adds crop bars to images to achieve a given aspect ratio."
authors = ["fakenamesmith"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
typer = {extras = ["all"], version = "^0.13.1"}
pillow = "^11.0.0"
rich = "^13.9.4"
click = ">=8.1.7,<8.2"

[tool.poetry.scripts]
letterbox = "letterbox.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
